--- a/day1/index.html
+++ b/day1/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="index.css">
         <title>Panic 😱</title>
     </head>
     <body>
         <h1>😱</h1>
+        <div class="container">
+            <input type="text" id="input-panic" class="input-panic">
+            <button id="btn-panic" class="button-panic">Panic me</button>
+            <p id="text-panic" class="text-panic"></p>
+        </div>
     </body>
     <script src="index.js"></script>
 </html>
