--- a/day2/index.html
+++ b/day2/index.html
@@ -7,7 +7,9 @@
     <body>
         <main>
             <h1>DATA MINER 😈</h1>
+            <p>${fullName}</p>
+            <p>${birthday}</p>
         </main>
-        <script src="index.js"></script>
+        <script type="module" src="./index.js"></script>
     </body>
 </html>
