formatting for day3

--- a/day3/index.html
+++ b/day3/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
-        <section id="meals"></section>
+        <section id="meals" class="container"></section>
         <script src="index.js"></script>
     </body>
 </html>
