--- a/day5/index.html
+++ b/day5/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        
+        <title>Javascriptmas Day 5!</title>
+        <script type="module" src="index.js"></script>
     </head>
     <body>
     </body>
-    <script src="index.js"></script>
+    
 </html>
